2002-03-14  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_exec.c (bk_exec): use execvp where possible
	(bk_search_path): the most broken code I have seen in a long time
	- it didn't even come close to working [but was surely faster to write
	than something using g_spawn_async_with_pipes :-]

	* lib/b_url.c (bk_url_unescape): define in terms of bk_url_unescape_len
	(bk_url_unescape_len): this is the more fundamental variant
	(bk_url_getparam): allow alternate delimiters, case-independent tokens,
	whitespace in parameters

2002-03-14  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_url.c (bk_url_unescape_len): Same as bk_url_unescape(),
	but constrained to the given len.

2002-03-11  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_printbuf): Don't write beyond end of str.

2002-03-07  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_do_poll): don't block if at EOF

	* lib/b_ioh.c (ioht_vector_other): document one of probably many
	bugs in vectored i/o
	(ioh_runhandler): avoid recursive close when destroying

2002-03-06  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_FLAG_SET, BK_FLAG_CLEAR): make these statement
	macros to prevent inadvertent use in tests where BK_FLAG_IS* is meant
	(BK_URL_SCHEME_EQ, BK_URL_AUTHORITY_EQ): use STR{N,}EQ as appropriate
	(BK_STREQCASE, BK_STRNEQCASE): use str{n,}casecmp
	(BK_URL_SCHEME_EQ, BK_URL_AUTHORITY_EQ, BK_URL_PATH_EQ): use correct
	str{n,}{case,}cmp variant
	
2002-03-05  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (CONVERT_SUBSECSNTP2TIMEVAL): for completeness
	(CONVERT_SUBSECSNTP2TIMESPEC): use argument to macro, not "secs"
	(CONVERT_SUBSECSTIMESPEC2NTP): renamed, use 1LL for left shift

	* lib/b_time.c (bk_time_iso_format): use correct MICROSEC for
	proper determination of desired precision
	(bk_time_ntp_format): generate ntp stamps, too
	(bk_time_ntp_parse): simplify, eliminate malloc, use strtoul, not baka
